--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
+    types: [opened, synchronize, reopened, labeled]
 
 permissions:
   contents: read
@@ -114,12 +115,12 @@ jobs:
             exit 1
           fi
 
-          # Generate markdown report
+          # Generate markdown report (ignore exit code - we already captured severity above)
           ./tools/build/install/tools/bin/tools ci-diff \
             --blessed-dir blessed \
             --calendars all \
             --output-format markdown \
-            --current-sha "${{ github.sha }}" > diff-report.md 2>> diff-error.log
+            --current-sha "${{ github.sha }}" > diff-report.md 2>> diff-error.log || true
 
           # Always show the report in the logs for visibility
           echo "::group::Calendar Diff Report"
@@ -182,14 +183,21 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+            const prNumber = context.payload.pull_request?.number || context.issue?.number;
+            console.log(`Checking PR #${prNumber} for approval label`);
+
             const { data: labels } = await github.rest.issues.listLabelsOnIssue({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              issue_number: context.issue.number
+              issue_number: prNumber
             });
+
+            console.log(`Found labels: ${labels.map(l => l.name).join(', ')}`);
 
             const approvalLabel = labels.find(l => l.name === 'calendar-change-approved');
             const severity = '${{ needs.calendar-diff.outputs.severity }}';
+
+            console.log(`Severity: ${severity}, Has approval label: ${!!approvalLabel}`);
 
             if (severity === 'MAJOR' && !approvalLabel) {
               core.setFailed(
