--- a/modules/holidays/christmas.yaml
+++ b/modules/holidays/christmas.yaml
@@ -6,8 +6,14 @@ event_sources:
     name: Christmas Day
     default_classification: CLOSED
     rule:
-      type: fixed_month_day
+      type: observed_holiday
       key: christmas
       name: Christmas Day
-      month: 12
-      day: 25
+      base_rule:
+        type: fixed_month_day
+        key: christmas_base
+        name: Christmas Day
+        month: 12
+        day: 25
+      saturday_shift: FRIDAY
+      sunday_shift: MONDAY
