--- a/modules/holidays/independence_day.yaml
+++ b/modules/holidays/independence_day.yaml
@@ -6,8 +6,14 @@ event_sources:
     name: Independence Day
     default_classification: CLOSED
     rule:
-      type: fixed_month_day
+      type: observed_holiday
       key: independence_day
       name: Independence Day
-      month: 7
-      day: 4
+      base_rule:
+        type: fixed_month_day
+        key: independence_day_base
+        name: Independence Day
+        month: 7
+        day: 4
+      saturday_shift: FRIDAY
+      sunday_shift: MONDAY
