--- a/modules/holidays/new_years_day.yaml
+++ b/modules/holidays/new_years_day.yaml
@@ -6,8 +6,14 @@ event_sources:
     name: New Year's Day
     default_classification: CLOSED
     rule:
-      type: fixed_month_day
+      type: observed_holiday
       key: new_years_day
       name: New Year's Day
-      month: 1
-      day: 1
+      base_rule:
+        type: fixed_month_day
+        key: new_years_day_base
+        name: New Year's Day
+        month: 1
+        day: 1
+      saturday_shift: FRIDAY
+      sunday_shift: MONDAY
