--- a/modules/holidays/christmas_eve.yaml
+++ b/modules/holidays/christmas_eve.yaml
@@ -4,16 +4,11 @@ id: christmas_eve
 event_sources:
   - key: christmas_eve
     name: Christmas Eve (Early Close)
-    default_classification: NOTABLE
+    default_classification: EARLY_CLOSE
+    shiftable: false
     rule:
-      type: observed_holiday
+      type: fixed_month_day
       key: christmas_eve
       name: Christmas Eve (Early Close)
-      base_rule:
-        type: fixed_month_day
-        key: christmas_eve_base
-        name: Christmas Eve
-        month: 12
-        day: 24
-      saturday_shift: NONE
-      sunday_shift: NONE
+      month: 12
+      day: 24
