--- a/modules/holidays/labor_day.yaml
+++ b/modules/holidays/labor_day.yaml
@@ -5,6 +5,7 @@ event_sources:
   - key: labor_day
     name: Labor Day
     default_classification: CLOSED
+    start_date: 1887-01-01
     rule:
       type: nth_weekday_of_month
       key: labor_day
