--- a/modules/holidays/memorial_day.yaml
+++ b/modules/holidays/memorial_day.yaml
@@ -5,6 +5,7 @@ event_sources:
   - key: memorial_day
     name: Memorial Day
     default_classification: CLOSED
+    start_date: 1971-01-01
     rule:
       type: nth_weekday_of_month
       key: memorial_day
