--- a/modules/holidays/presidents_day.yaml
+++ b/modules/holidays/presidents_day.yaml
@@ -5,6 +5,7 @@ event_sources:
   - key: presidents_day
     name: Presidents Day
     default_classification: CLOSED
+    start_date: 1971-01-01
     rule:
       type: nth_weekday_of_month
       key: presidents_day
