--- a/modules/holidays/thanksgiving.yaml
+++ b/modules/holidays/thanksgiving.yaml
@@ -5,6 +5,7 @@ event_sources:
   - key: thanksgiving
     name: Thanksgiving Day
     default_classification: CLOSED
+    start_date: 1940-01-01
     rule:
       type: nth_weekday_of_month
       key: thanksgiving
