--- a/modules/holidays/us_historical_closures.yaml
+++ b/modules/holidays/us_historical_closures.yaml
@@ -28,6 +28,12 @@ event_sources:
       key: national_mourning
       name: National Day of Mourning
       dates:
+        - date: 1963-11-25
+          comment: John F. Kennedy
+        - date: 1968-04-09
+          comment: Martin Luther King Jr.
+        - date: 1969-03-31
+          comment: Dwight D. Eisenhower
         - date: 1972-12-28
           comment: Harry S. Truman
         - date: 1973-01-25
@@ -48,6 +54,8 @@ event_sources:
       key: weather_closures
       name: Weather Event
       dates:
+        - date: 1969-02-10
+          comment: Heavy Snow
         - date: 1985-09-27
           comment: Hurricane Gloria
 
@@ -62,19 +70,114 @@ event_sources:
       dates:
         - 1977-07-14
 
-  # Election Day closures (presidential years 1972-1980)
-  # Note: Election Day was closed every year through 1968, then only presidential years 1972-1980
+  # Election Day closures
+  # Election Day is the first Tuesday after November 1st
+  # Closed every year through 1968, then only presidential years 1972-1980
   - key: election_day_closures
     name: Election Day
     default_classification: CLOSED
+    active_years:
+      - [null, 1968]  # Annual closures through 1968
+      - 1972          # Presidential Election
+      - 1976          # Presidential Election
+      - 1980          # Presidential Election
     rule:
-      type: explicit_dates
+      type: relative_to_reference
       key: election_day_closures
       name: Election Day
+      reference_month: 11
+      reference_day: 1
+      offset_weekday:
+        weekday: TUESDAY
+        nth: 1
+        direction: AFTER
+
+  # First Lunar Landing - National Day of Participation
+  - key: lunar_landing
+    name: First Lunar Landing
+    default_classification: CLOSED
+    rule:
+      type: explicit_dates
+      key: lunar_landing
+      name: First Lunar Landing
       dates:
-        - date: 1972-11-07
-          comment: Presidential Election
-        - date: 1976-11-02
-          comment: Presidential Election
-        - date: 1980-11-04
-          comment: Presidential Election
+        - 1969-07-21
+
+  # Paperwork Crisis of 1968 - Four day week (closed Wednesdays)
+  - key: paperwork_crisis
+    name: Paperwork Crisis
+    default_classification: CLOSED
+    rule:
+      type: explicit_dates
+      key: paperwork_crisis
+      name: Paperwork Crisis
+      dates:
+        # June 1968
+        - 1968-06-12
+        - 1968-06-19
+        - 1968-06-26
+        # July 1968
+        - 1968-07-03
+        - 1968-07-10
+        - 1968-07-17
+        - 1968-07-24
+        - 1968-07-31
+        # August 1968
+        - 1968-08-07
+        - 1968-08-14
+        - 1968-08-21
+        - 1968-08-28
+        # September 1968
+        - 1968-09-04
+        - 1968-09-11
+        - 1968-09-18
+        - 1968-09-25
+        # October 1968
+        - 1968-10-02
+        - 1968-10-09
+        - 1968-10-16
+        - 1968-10-23
+        - 1968-10-30
+        # November 1968
+        - 1968-11-06
+        - 1968-11-13
+        - 1968-11-20
+        - 1968-11-27
+        # December 1968
+        - 1968-12-04
+        - 1968-12-11
+        - 1968-12-18
+        - 1968-12-24
+
+  # Day after Independence Day (one-off closures)
+  - key: day_after_independence
+    name: Day After Independence Day
+    default_classification: CLOSED
+    rule:
+      type: explicit_dates
+      key: day_after_independence
+      name: Day After Independence Day
+      dates:
+        - 1968-07-05
+
+  # Day before Decoration Day (one-off closures)
+  - key: day_before_decoration
+    name: Day Before Decoration Day
+    default_classification: CLOSED
+    rule:
+      type: explicit_dates
+      key: day_before_decoration
+      name: Day Before Decoration Day
+      dates:
+        - 1961-05-29
+
+  # Lincoln's Birthday (one-off after regular observance ended in 1953)
+  - key: lincolns_birthday_oneoff
+    name: Lincoln's Birthday
+    default_classification: CLOSED
+    rule:
+      type: explicit_dates
+      key: lincolns_birthday_oneoff
+      name: Lincoln's Birthday
+      dates:
+        - 1968-02-12
