--- a/modules/holidays/juneteenth.yaml
+++ b/modules/holidays/juneteenth.yaml
@@ -5,7 +5,8 @@ event_sources:
   - key: juneteenth
     name: Juneteenth National Independence Day
     default_classification: CLOSED
-    start_date: 2022-01-01
+    active_years:
+      - [2022, null]
     rule:
       type: fixed_month_day
       key: juneteenth
