--- a/modules/holidays/memorial_day.yaml
+++ b/modules/holidays/memorial_day.yaml
@@ -5,7 +5,8 @@ event_sources:
   - key: memorial_day
     name: Memorial Day
     default_classification: CLOSED
-    start_date: 1971-01-01
+    active_years:
+      - [1971, null]
     rule:
       type: nth_weekday_of_month
       key: memorial_day
