--- a/blessed/US-MARKET-BASE/resolved.yaml
+++ b/blessed/US-MARKET-BASE/resolved.yaml
@@ -16,12 +16,6 @@ resolution_chain:
 - module:labor_day
 - module:thanksgiving
 - module:christmas
-- module:decoration_day
-- module:washingtons_birthday
-- module:lincolns_birthday
-- module:flag_day
-- module:armistice_veterans_day
-- module:columbus_day
 - module:us_market_base
 - calendar:US-MARKET-BASE
 event_sources:
@@ -35,9 +29,7 @@ event_sources:
 - key: memorial_day
   name: Memorial Day
   classification: CLOSED
-  active_years:
-  - - 1971
-    - null
+  start_date: 1971-01-01
   rule:
     type: nth_weekday_of_month
     month: 5
@@ -53,31 +45,16 @@ event_sources:
 - key: labor_day
   name: Labor Day
   classification: CLOSED
-  active_years:
-  - - 1887
-    - null
+  start_date: 1887-01-01
   rule:
     type: nth_weekday_of_month
     month: 9
     weekday: MONDAY
     nth: 1
-- key: thanksgiving_pre1940
-  name: Thanksgiving Day
-  classification: CLOSED
-  active_years:
-  - - 1900
-    - 1939
-  rule:
-    type: nth_weekday_of_month
-    month: 11
-    weekday: THURSDAY
-    nth: -1
 - key: thanksgiving
   name: Thanksgiving Day
   classification: CLOSED
-  active_years:
-  - - 1940
-    - null
+  start_date: 1940-01-01
   rule:
     type: nth_weekday_of_month
     month: 11
@@ -90,63 +67,3 @@ event_sources:
     type: fixed_month_day
     month: 12
     day: 25
-- key: decoration_day
-  name: Decoration Day
-  classification: CLOSED
-  active_years:
-  - - 1900
-    - 1970
-  rule:
-    type: fixed_month_day
-    month: 5
-    day: 30
-- key: washingtons_birthday
-  name: Washington's Birthday
-  classification: CLOSED
-  active_years:
-  - - 1900
-    - 1970
-  rule:
-    type: fixed_month_day
-    month: 2
-    day: 22
-- key: lincolns_birthday
-  name: Lincoln's Birthday
-  classification: CLOSED
-  active_years:
-  - - 1896
-    - 1953
-  rule:
-    type: fixed_month_day
-    month: 2
-    day: 12
-- key: flag_day
-  name: Flag Day
-  classification: CLOSED
-  active_years:
-  - - 1916
-    - 1953
-  rule:
-    type: fixed_month_day
-    month: 6
-    day: 14
-- key: armistice_veterans_day
-  name: Armistice Day
-  classification: CLOSED
-  active_years:
-  - - 1918
-    - 1953
-  rule:
-    type: fixed_month_day
-    month: 11
-    day: 11
-- key: columbus_day
-  name: Columbus Day
-  classification: CLOSED
-  active_years:
-  - - 1909
-    - 1953
-  rule:
-    type: fixed_month_day
-    month: 10
-    day: 12
