--- a/blessed/US-NYSE/resolved.yaml
+++ b/blessed/US-NYSE/resolved.yaml
@@ -16,12 +16,6 @@ resolution_chain:
 - module:labor_day
 - module:thanksgiving
 - module:christmas
-- module:decoration_day
-- module:washingtons_birthday
-- module:lincolns_birthday
-- module:flag_day
-- module:armistice_veterans_day
-- module:columbus_day
 - module:us_market_base
 - module:mlk_day
 - module:presidents_day
@@ -29,8 +23,8 @@ resolution_chain:
 - module:juneteenth
 - module:day_after_thanksgiving
 - module:christmas_eve
-- module:us_historical_closures
 - module:us_nyse_holidays
+- module:us_historical_closures
 - calendar:US-NYSE
 references:
 - key: easter
@@ -48,9 +42,7 @@ event_sources:
 - key: memorial_day
   name: Memorial Day
   classification: CLOSED
-  active_years:
-  - - 1971
-    - null
+  start_date: 1971-01-01
   rule:
     type: nth_weekday_of_month
     month: 5
@@ -66,31 +58,16 @@ event_sources:
 - key: labor_day
   name: Labor Day
   classification: CLOSED
-  active_years:
-  - - 1887
-    - null
+  start_date: 1887-01-01
   rule:
     type: nth_weekday_of_month
     month: 9
     weekday: MONDAY
     nth: 1
-- key: thanksgiving_pre1940
-  name: Thanksgiving Day
-  classification: CLOSED
-  active_years:
-  - - 1900
-    - 1939
-  rule:
-    type: nth_weekday_of_month
-    month: 11
-    weekday: THURSDAY
-    nth: -1
 - key: thanksgiving
   name: Thanksgiving Day
   classification: CLOSED
-  active_years:
-  - - 1940
-    - null
+  start_date: 1940-01-01
   rule:
     type: nth_weekday_of_month
     month: 11
@@ -103,72 +80,10 @@ event_sources:
     type: fixed_month_day
     month: 12
     day: 25
-- key: decoration_day
-  name: Decoration Day
-  classification: CLOSED
-  active_years:
-  - - 1900
-    - 1970
-  rule:
-    type: fixed_month_day
-    month: 5
-    day: 30
-- key: washingtons_birthday
-  name: Washington's Birthday
-  classification: CLOSED
-  active_years:
-  - - 1900
-    - 1970
-  rule:
-    type: fixed_month_day
-    month: 2
-    day: 22
-- key: lincolns_birthday
-  name: Lincoln's Birthday
-  classification: CLOSED
-  active_years:
-  - - 1896
-    - 1953
-  rule:
-    type: fixed_month_day
-    month: 2
-    day: 12
-- key: flag_day
-  name: Flag Day
-  classification: CLOSED
-  active_years:
-  - - 1916
-    - 1953
-  rule:
-    type: fixed_month_day
-    month: 6
-    day: 14
-- key: armistice_veterans_day
-  name: Armistice Day
-  classification: CLOSED
-  active_years:
-  - - 1918
-    - 1953
-  rule:
-    type: fixed_month_day
-    month: 11
-    day: 11
-- key: columbus_day
-  name: Columbus Day
-  classification: CLOSED
-  active_years:
-  - - 1909
-    - 1953
-  rule:
-    type: fixed_month_day
-    month: 10
-    day: 12
 - key: mlk_day
   name: Martin Luther King Jr. Day
   classification: CLOSED
-  active_years:
-  - - 1998
-    - null
+  start_date: 1998-01-01
   rule:
     type: nth_weekday_of_month
     month: 1
@@ -177,9 +92,7 @@ event_sources:
 - key: presidents_day
   name: Presidents Day
   classification: CLOSED
-  active_years:
-  - - 1971
-    - null
+  start_date: 1971-01-01
   rule:
     type: nth_weekday_of_month
     month: 2
@@ -195,9 +108,7 @@ event_sources:
 - key: juneteenth
   name: Juneteenth National Independence Day
   classification: CLOSED
-  active_years:
-  - - 2022
-    - null
+  start_date: 2022-01-01
   rule:
     type: fixed_month_day
     month: 6
@@ -216,58 +127,6 @@ event_sources:
     type: fixed_month_day
     month: 12
     day: 24
-- key: presidential_funerals
-  name: Presidential Funeral
-  classification: CLOSED
-  rule:
-    type: explicit_dates
-    dates:
-    - date: 2007-01-02
-      comment: Gerald Ford
-    - date: 2004-06-11
-      comment: Ronald Reagan
-    - date: 1994-04-27
-      comment: Richard Nixon
-    - date: 1973-01-25
-      comment: Lyndon B. Johnson
-    - date: 1972-12-28
-      comment: Harry S. Truman
-    - date: 1969-03-31
-      comment: Dwight D. Eisenhower
-    - date: 1968-04-09
-      comment: Martin Luther King Jr.
-    - date: 1963-11-25
-      comment: John F. Kennedy
-    - date: 1945-04-14
-      comment: Franklin D. Roosevelt
-    - date: 1933-01-07
-      comment: Calvin Coolidge
-    - date: 1923-08-10
-      comment: Warren G. Harding
-    - date: 1923-08-03
-      comment: Warren G. Harding (death)
-    - date: 1912-11-02
-      comment: Vice President James Sherman
-    - date: 1901-09-19
-      comment: William McKinley
-    - date: 1901-09-14
-      comment: William McKinley (assassination)
-- key: weather_closures
-  name: Weather Event
-  classification: CLOSED
-  rule:
-    type: explicit_dates
-    dates:
-    - date: 1985-09-27
-      comment: Hurricane Gloria
-    - date: 1969-02-10
-      comment: Heavy Snow
-    - date: 1948-01-03
-      comment: Heavy Snow
-    - date: 1917-08-04
-      comment: Heat Wave
-    - date: 1888-03-13
-      comment: Great Blizzard of 1888
 - key: sept_11_closure
   name: September 11 Closure
   classification: CLOSED
@@ -278,6 +137,38 @@ event_sources:
     - 2001-09-12
     - 2001-09-13
     - 2001-09-14
+- key: national_mourning
+  name: National Day of Mourning
+  classification: CLOSED
+  rule:
+    type: explicit_dates
+    dates:
+    - date: 1963-11-25
+      comment: John F. Kennedy
+    - date: 1968-04-09
+      comment: Martin Luther King Jr.
+    - date: 1969-03-31
+      comment: Dwight D. Eisenhower
+    - date: 1972-12-28
+      comment: Harry S. Truman
+    - date: 1973-01-25
+      comment: Lyndon B. Johnson
+    - date: 1994-04-27
+      comment: Richard Nixon
+    - date: 2004-06-11
+      comment: Ronald Reagan
+    - date: 2007-01-02
+      comment: Gerald Ford
+- key: weather_closures
+  name: Weather Event
+  classification: CLOSED
+  rule:
+    type: explicit_dates
+    dates:
+    - date: 1969-02-10
+      comment: Heavy Snow
+    - date: 1985-09-27
+      comment: Hurricane Gloria
 - key: nyc_blackout
   name: New York City Blackout
   classification: CLOSED
@@ -285,30 +176,20 @@ event_sources:
     type: explicit_dates
     dates:
     - 1977-07-14
-- key: banking_holiday_1933
-  name: Banking Holiday
+- key: election_day_closures
+  name: Election Day
+  classification: CLOSED
+  rule:
+    type: relative_to_reference
+    reference: null
+    offset_days: null
+- key: lunar_landing
+  name: First Lunar Landing
   classification: CLOSED
   rule:
     type: explicit_dates
     dates:
-    - date: 1933-03-04
-      comment: State Banking Holiday
-    - date: 1933-03-06
-      comment: National Banking Holiday
-    - date: 1933-03-07
-      comment: National Banking Holiday
-    - date: 1933-03-08
-      comment: National Banking Holiday
-    - date: 1933-03-09
-      comment: National Banking Holiday
-    - date: 1933-03-10
-      comment: National Banking Holiday
-    - date: 1933-03-11
-      comment: National Banking Holiday
-    - date: 1933-03-13
-      comment: National Banking Holiday
-    - date: 1933-03-14
-      comment: National Banking Holiday
+    - 1969-07-21
 - key: paperwork_crisis
   name: Paperwork Crisis
   classification: CLOSED
@@ -344,223 +225,20 @@ event_sources:
     - 1968-12-11
     - 1968-12-18
     - 1968-12-24
-- key: wwi_closure
-  name: World War I Closure
+- key: day_after_independence
+  name: Day After Independence Day
   classification: CLOSED
   rule:
     type: explicit_dates
     dates:
-    - 1914-07-31
-    - 1914-08-01
-    - 1914-08-03
-    - 1914-08-04
-    - 1914-08-05
-    - 1914-08-06
-    - 1914-08-07
-    - 1914-08-08
-    - 1914-08-10
-    - 1914-08-11
-    - 1914-08-12
-    - 1914-08-13
-    - 1914-08-14
-    - 1914-08-15
-    - 1914-08-17
-    - 1914-08-18
-    - 1914-08-19
-    - 1914-08-20
-    - 1914-08-21
-    - 1914-08-22
-    - 1914-08-24
-    - 1914-08-25
-    - 1914-08-26
-    - 1914-08-27
-    - 1914-08-28
-    - 1914-08-29
-    - 1914-08-31
-    - 1914-09-01
-    - 1914-09-02
-    - 1914-09-03
-    - 1914-09-04
-    - 1914-09-05
-    - 1914-09-07
-    - 1914-09-08
-    - 1914-09-09
-    - 1914-09-10
-    - 1914-09-11
-    - 1914-09-12
-    - 1914-09-14
-    - 1914-09-15
-    - 1914-09-16
-    - 1914-09-17
-    - 1914-09-18
-    - 1914-09-19
-    - 1914-09-21
-    - 1914-09-22
-    - 1914-09-23
-    - 1914-09-24
-    - 1914-09-25
-    - 1914-09-26
-    - 1914-09-28
-    - 1914-09-29
-    - 1914-09-30
-    - 1914-10-01
-    - 1914-10-02
-    - 1914-10-03
-    - 1914-10-05
-    - 1914-10-06
-    - 1914-10-07
-    - 1914-10-08
-    - 1914-10-09
-    - 1914-10-10
-    - 1914-10-13
-    - 1914-10-14
-    - 1914-10-15
-    - 1914-10-16
-    - 1914-10-17
-    - 1914-10-19
-    - 1914-10-20
-    - 1914-10-21
-    - 1914-10-22
-    - 1914-10-23
-    - 1914-10-24
-    - 1914-10-26
-    - 1914-10-27
-    - 1914-10-28
-    - 1914-10-29
-    - 1914-10-30
-    - 1914-10-31
-    - 1914-11-02
-    - 1914-11-04
-    - 1914-11-05
-    - 1914-11-06
-    - 1914-11-07
-    - 1914-11-09
-    - 1914-11-10
-    - 1914-11-12
-    - 1914-11-13
-    - 1914-11-14
-    - 1914-11-16
-    - 1914-11-17
-    - 1914-11-18
-    - 1914-11-19
-    - 1914-11-20
-    - 1914-11-21
-    - 1914-11-23
-    - 1914-11-24
-    - 1914-11-25
-    - 1914-11-27
-    - 1914-11-28
-    - 1914-11-30
-    - 1914-12-01
-    - 1914-12-02
-    - 1914-12-03
-    - 1914-12-04
-    - 1914-12-05
-    - 1914-12-07
-    - 1914-12-08
-    - 1914-12-09
-    - 1914-12-10
-    - 1914-12-11
-- key: wwi_related
-  name: WWI Related
+    - 1968-07-05
+- key: day_before_decoration
+  name: Day Before Decoration Day
   classification: CLOSED
   rule:
     type: explicit_dates
     dates:
-    - date: 1918-09-12
-      comment: Draft Registration Day
-    - date: 1918-01-28
-      comment: Heatless Day
-    - date: 1918-02-04
-      comment: Heatless Day
-    - date: 1918-02-11
-      comment: Heatless Day
-    - date: 1917-06-05
-      comment: Draft Registration Day
-- key: vj_day
-  name: Victory Over Japan Day
-  classification: CLOSED
-  rule:
-    type: explicit_dates
-    dates:
-    - 1945-08-15
-    - 1945-08-16
-- key: election_day_closures
-  name: Election Day
-  classification: CLOSED
-  active_years:
-  - - null
-    - 1968
-  - 1972
-  - 1976
-  - 1980
-  rule:
-    type: relative_to_reference
-    reference: null
-    offset_days: null
-- key: lunar_landing
-  name: First Lunar Landing
-  classification: CLOSED
-  rule:
-    type: explicit_dates
-    dates:
-    - 1969-07-21
-- key: special_events
-  name: Special Event
-  classification: CLOSED
-  rule:
-    type: explicit_dates
-    dates:
-    - date: 1946-05-25
-      comment: Railroad Strike
-    - date: 1945-10-27
-      comment: Navy Day
-    - date: 1927-06-13
-      comment: Lindbergh Parade
-    - date: 1919-09-10
-      comment: Return of General Pershing
-    - date: 1919-05-06
-      comment: Parade
-    - date: 1919-03-25
-      comment: Homecoming of 27th Division
-    - date: 1920-05-01
-      comment: Relocation of Brokerage Offices
-    - date: 1909-09-25
-      comment: Hudson-Fulton Celebration
-    - date: 1903-04-22
-      comment: New NYSE Building Opened
-    - date: 1902-08-09
-      comment: Coronation of King Edward VII
-    - date: 1901-02-02
-      comment: Funeral of Queen Victoria
-    - date: 1901-04-27
-      comment: Move to Temporary Quarters
-    - date: 1901-05-11
-      comment: Enlargement of Temporary Quarters
-    - date: 1899-09-29
-      comment: Admiral Dewey Celebration
-    - date: 1899-09-30
-      comment: Admiral Dewey Celebration
-    - date: 1898-05-04
-      comment: Charter Day
-    - date: 1898-08-20
-      comment: Welcome of Naval Commanders
-    - date: 1897-04-27
-      comment: Presidential Birthday (Grant)
-    - date: 1893-04-27
-      comment: Columbian Celebration
-    - date: 1892-10-12
-      comment: Columbian Celebration
-    - date: 1892-10-21
-      comment: Columbian Celebration
-    - date: 1892-10-22
-      comment: Columbian Celebration
-    - date: 1889-04-29
-      comment: Centennial of Washington's Inauguration
-    - date: 1889-04-30
-      comment: Centennial of Washington's Inauguration
-    - date: 1889-05-01
-      comment: Centennial of Washington's Inauguration
+    - 1961-05-29
 - key: lincolns_birthday_oneoff
   name: Lincoln's Birthday
   classification: CLOSED
@@ -568,23 +246,3 @@ event_sources:
     type: explicit_dates
     dates:
     - 1968-02-12
-- key: holiday_extensions
-  name: Holiday Extension
-  classification: CLOSED
-  rule:
-    type: explicit_dates
-    dates:
-    - date: 1968-07-05
-      comment: Day After Independence Day
-    - date: 1961-05-29
-      comment: Day Before Decoration Day
-    - date: 1958-12-26
-      comment: Day After Christmas
-    - date: 1901-07-05
-      comment: Day After Independence Day
-    - date: 1899-07-03
-      comment: Day Before Independence Day
-    - date: 1899-05-29
-      comment: Day Before Decoration Day
-    - date: 1888-11-30
-      comment: Day After Thanksgiving
