--- a/chronologies/iso.yaml
+++ b/chronologies/iso.yaml
@@ -10,23 +10,30 @@ metadata:
     divided into 12 months.
 
 structure:
-  epoch_jdn: 1721426  # JDN of January 1, 1 CE (proleptic Gregorian)
+  epoch_jdn: 1721426  # January 1, 1 CE (proleptic Gregorian)
   week:
-    days_per_week: 7
-    first_day: MONDAY
+    days:
+      - Sunday
+      - Monday
+      - Tuesday
+      - Wednesday
+      - Thursday
+      - Friday
+      - Saturday
+    first_day: Monday
   months:
-    - {name: January,   days: 31}
-    - {name: February,  days: 28, leap_days: 29}
-    - {name: March,     days: 31}
-    - {name: April,     days: 30}
-    - {name: May,       days: 31}
-    - {name: June,      days: 30}
-    - {name: July,      days: 31}
-    - {name: August,    days: 31}
+    - {name: January, days: 31}
+    - {name: February, days: 28, leap_days: 29}
+    - {name: March, days: 31}
+    - {name: April, days: 30}
+    - {name: May, days: 31}
+    - {name: June, days: 30}
+    - {name: July, days: 31}
+    - {name: August, days: 31}
     - {name: September, days: 30}
-    - {name: October,   days: 31}
-    - {name: November,  days: 30}
-    - {name: December,  days: 31}
+    - {name: October, days: 31}
+    - {name: November, days: 30}
+    - {name: December, days: 31}
 
 algorithms:
   type: FORMULA
