--- a/chronologies/persian.yaml
+++ b/chronologies/persian.yaml
@@ -6,32 +6,40 @@ metadata:
   description: |
     The Solar Hijri calendar (Persian: گاه‌شماری هجری خورشیدی) is the official
     calendar of Iran and Afghanistan. It is a solar calendar with 12 months,
-    beginning on the March equinox. The first six months have 31 days, the
-    next five have 30 days, and the last month has 29 days (30 in leap years).
-    The calendar uses a complex 2820-year cycle for determining leap years,
-    but can be approximated by a simpler rule.
+    beginning on the March equinox.
+
+    The first six months have 31 days, the next five have 30 days, and the
+    last month has 29 days (30 in leap years). This arithmetic version uses
+    a 2820-year cycle approximation for leap years.
 
 structure:
-  epoch_jdn: 1948320  # JDN of Farvardin 1, 1 AP (March 22, 622 CE Julian)
+  epoch_jdn: 1948320  # Farvardin 1, 1 AP (March 22, 622 CE Julian)
   week:
-    days_per_week: 7
-    first_day: SATURDAY
+    days:
+      - Yekshanbeh    # Sunday
+      - Doshanbeh     # Monday
+      - Seshhanbeh    # Tuesday
+      - Chaharshanbeh # Wednesday
+      - Panjshanbeh   # Thursday
+      - Jomeh         # Friday
+      - Shanbeh       # Saturday
+    first_day: Shanbeh
   months:
-    - {name: Farvardin,   days: 31}
+    - {name: Farvardin, days: 31}
     - {name: Ordibehesht, days: 31}
-    - {name: Khordad,     days: 31}
-    - {name: Tir,         days: 31}
-    - {name: Mordad,      days: 31}
-    - {name: Shahrivar,   days: 31}
-    - {name: Mehr,        days: 30}
-    - {name: Aban,        days: 30}
-    - {name: Azar,        days: 30}
-    - {name: Dey,         days: 30}
-    - {name: Bahman,      days: 30}
-    - {name: Esfand,      days: 29, leap_days: 30}
+    - {name: Khordad, days: 31}
+    - {name: Tir, days: 31}
+    - {name: Mordad, days: 31}
+    - {name: Shahrivar, days: 31}
+    - {name: Mehr, days: 30}
+    - {name: Aban, days: 30}
+    - {name: Azar, days: 30}
+    - {name: Dey, days: 30}
+    - {name: Bahman, days: 30}
+    - {name: Esfand, days: 29, leap_days: 30}
 
 algorithms:
   type: FORMULA
-  # Simplified leap year rule (accurate for most practical purposes)
-  # The true rule uses a 2820-year cycle
-  leap_year: "((year - 474) % 2820 + 474 + 38) * 682 % 2816 < 682"
+  # 2820-year cycle approximation
+  # Leap years: ((year - 474) % 2820 + 474 + 38) * 682 % 2816 < 682
+  leap_year: "((((year - 474) % 2820) + 474 + 38) * 682 % 2816) < 682"
